feat: introduce task aliases (#121)
* feat: introduce task aliases

The task format is now

tasks:
  task-name: single-arg

or

tasks:
  task-name:
   - arg1
   - arg2
   ..
   - argN

* chore: simplify code, we expect only List<String>

* test: add tests for commands(task)

* fix: add missing class

* feat: read configuration from the current directory.